[improvement](headless|chat|launcher|webapp) Code cleanup, tenant injection, and build config updates
Inject tenant context into controllers and services, update constructor injection
patterns, enhance DB adaptors with pool config support, update Caffeine cache
configuration, add new routes and menu items for report/connection/delivery pages,
update SQL migrations, and improve plugin/chat infrastructure.

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>